--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -16,10 +16,9 @@
   {{!-- nav class from bootstrap navbar-expand-lg navbar-light bg-light --}}
   <h2 class="logo">CityEasier</h2>
   <nav class="site-nav">
-    <h2>CityEasier</h2>
     <div class="nav">
-      <button class="nav-trigger">Menu</button>
-      <div class="menu">
+      <button class="side-menu-trigger">Menu</button>
+      <div class="side-menu">
         <ul>
           <li> <a href="/"> Home</a></li>
           {{#unless currentUser}}
