--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -5,14 +5,14 @@
   box-sizing: border-box;
 }
 
-/* logo: #B3B33D
+/* colors:
+logo: #B3B33D
 body: #94D2FF
 yellow: #FFFF7B
 brick light: #CC504E
 brick dark: #B34F4D */
 
 body {
-  /* padding: 50px; */
   font: 16px "Montserrat", Helvetica, Arial, sans-serif;
   background-color: #94d2ff;
 }
@@ -23,22 +23,11 @@ body {
   margin: 0;
 }
 
-/* #wrap {
-  min-height: 100%;
-} */
-
-/* #main {
-  overflow: auto;
-  padding-bottom: 3rem; 
-  /* this needs to be bigger than footer height
-}*/
-
 button {
   cursor: pointer;
 }
-
+/*LAYOUT*/
 /* logo from layout*/
-
 h2.logo {
   font-family: "Acme", sans-serif;
   font-size: 3.5em;
@@ -57,7 +46,7 @@ h2.logo {
   width: 100%;
   background: #cc504e;
 }
-
+/*button*/
 .side-menu-trigger {
   font-size: 1.2rem;
   font-weight: bold;
@@ -118,10 +107,6 @@ h2.logo {
 .open {
   transform: translateX(0px);
 }
-/* .side-menu-trigger:focus ~ .side-menu,
-.side-menu:hover {
-  transform: translateX(0px);
-} */
 
 /*footer layout*/
 footer p {
@@ -231,25 +216,23 @@ footer p {
 
 /* SIGNUP VIEW */
 .signup-wrapper h1 {
-  font-size: 3rem;
+  font-size: 2.2rem;
   color: #175d79;
   text-align: center;
-  margin-bottom: 10rem;
+  margin-bottom: 2rem;
 }
 
 .signup-wrapper {
   height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-content: space-between;
+  justify-content: space-between;
 }
 
 .signup-form {
-  height: 50vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: space-between;
   text-align: center;
 }
@@ -257,25 +240,25 @@ footer p {
 .signup-form label,
 .signup-form input {
   display: block;
-  font-size: 3rem;
-  line-height: 5rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
 }
 
 .signup-form input {
   border: 4px solid #175d79;
   border-radius: 15px;
   background-color: rgb(245, 238, 238);
-  width: 40rem;
-  margin: 4rem auto;
+  width: 70vw;
+  margin: 1rem auto;
 }
 
 .signup-form button {
-  font-size: 3rem;
+  font-size: 2rem;
   color: #175d79;
   text-decoration: none;
   display: inline-block;
-  margin: 5rem auto;
-  width: 30rem;
+  margin: 1rem auto;
+  width: 70vw;
   text-transform: uppercase;
   padding: 0.5em 2em;
   border: 5px solid #175d79;
