make style single.place view

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -1,7 +1,7 @@
 {{!-- In this page that is in a city and show the category --> nombre barcelona y datos categoria --}}
 
 <div class="place-type-wrapper">
-    <h3>Tipo array: {{arrayRestaurantInCity.[0].contact.address}}</h3>
+    <h3>You are in: {{arrayRestaurantInCity.[0].contact.address}}</h3>
     <br>
 
 
