--- a/CodeProject/views/singlePlace/restaurantDetail.hbs
+++ b/CodeProject/views/singlePlace/restaurantDetail.hbs
@@ -17,7 +17,7 @@
     <p>Description : {{restaurant.[0].description}} </p>
 
     {{#each restaurant.[0].comments}}
-    <div>
+    <div class="comments">
         <h4>Comments:</h4>
         <p>Name: {{this.name}}</p>
         <p>date: {{this.date}}</p>
