--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -181,7 +181,6 @@ footer p {
 .list-cities li {
   /* 4 rem */
   font-size: 2rem;
-  color: aliceblue;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
@@ -223,7 +222,7 @@ footer p {
 }
 
 .signup-wrapper {
-  height: 80vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -261,8 +260,9 @@ footer p {
   width: 70vw;
   text-transform: uppercase;
   padding: 0.5em 2em;
-  border: 5px solid #175d79;
+  border: 3px solid #175d79;
   border-radius: 2.5rem;
+  background-color: #b3b33d;
 }
 
 .signup-form p {
@@ -315,18 +315,19 @@ footer p {
 
 /*PLACE-TYPE FAVOURITES*/
 .place-type-wrapper h3 {
-  font-size: 3rem;
-  color: #175d79;
+  font-size: 2rem;
   text-align: center;
-  margin: 5rem auto;
+  padding: 1rem;
+  margin: 2rem auto;
+  color: #ffff7b;
 }
 
 .place-type-one {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2rem;
-  margin: 4rem 2rem;
+  padding: 1rem;
+  margin: 1rem 1rem;
   background-color: rgba(222, 222, 222, 0.4);
 }
 
@@ -334,23 +335,25 @@ footer p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 45%;
+  width: 40%;
 }
 
 .place-type-one img {
-  width: 45%;
-  margin-right: 2rem;
+  width: 60%;
+  margin-right: 1rem;
 }
 
-.place-type-one h2 {
-  font-size: 2.6rem;
-  color: #175d79;
+.place-type-one h2 a {
+  font-size: 1.2rem;
+  color: #b34f4d;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .place-type-one p {
-  font-size: 2.2rem;
-  color: #175d79;
+  font-size: 0.8rem;
+  color: #b34f4d;
   text-align: center;
 }
 
@@ -363,33 +366,54 @@ footer p {
 }
 
 .single-place-wrapper h2 {
-  font-size: 5rem;
-  margin: 3rem auto;
+  font-size: 2.8rem;
+  margin: 2.5rem auto 1rem;
+  color: #b34f4d;
 }
 
 .single-place-wrapper img {
-  max-width: 600px;
-  margin: 3rem auto;
+  max-width: 100%;
+  margin: 1rem auto;
 }
 
 .single-place-wrapper h4 {
-  font-size: 2.7rem;
+  font-size: 1.4rem;
+  margin: 0.3rem;
+  padding: 0.3rem;
 }
 
 .single-place-wrapper button {
-  max-width: 600px;
+  width: 100%;
   font-weight: bold;
+  color: #ffff7b;
   padding: 1rem 3rem;
-  margin: 4rem auto;
-  line-height: 4rem;
-  font-size: 3.5rem;
-  background-color: rgb(233, 146, 146);
+  margin: 0.8rem auto;
+  line-height: 2rem;
+  font-size: 1.6rem;
+  background-color: #b34f4d;
 }
 
 .single-place-wrapper h5 a {
-  font-size: 2.6rem;
+  font-size: 2rem;
   text-decoration: underline;
+  color: #b3b33d;
 }
 .single-place-wrapper h5 {
   margin: 1rem auto;
+}
+
+.single-place-wrapper .comments {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(205, 209, 235);
+}
+.single-place-wrapper .comments h4 {
+  font-size: 1.2rem;
+  border-bottom: 1px solid #b34f4d;
+  text-align: center;
+  margin: 0 2rem;
+}
+.single-place-wrapper .comments p {
+  font-size: 1rem;
+  margin: 0.3rem;
 }
