--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -323,6 +323,7 @@ footer p {
 }
 
 .place-type-one {
+  height: 25vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -336,7 +337,7 @@ footer p {
   flex-direction: column;
   justify-content: space-around;
   width: 40%;
-}
+  }
 
 .place-type-one img {
   width: 60%;
