--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,44 +1,119 @@
-body {
-  padding: 50px;
-  font: 14px "Montserrat", Helvetica, Arial, sans-serif;
+* {
+  padding: 0;
+
+  border: 0;
+  box-sizing: border-box;
 }
 
-a {
-  color: #00b7ff;
+/* colors:
+logo: #B3B33D
+body: #94D2FF
+yellow: #FFFF7B
+brick light: #CC504E
+brick dark: #B34F4D */
+
+body {
+  font: 16px "Montserrat", Helvetica, Arial, sans-serif;
+  background-color: #94d2ff;
 }
 
 html,
 body {
   height: 100%;
+  margin: 0;
 }
-
-#wrap {
-  min-height: 100%;
-}
-
-/* #main {
-  overflow: auto;
-  padding-bottom: 3rem; 
-  /* this needs to be bigger than footer height
-}*/
 
 button {
   cursor: pointer;
 }
-
+/*LAYOUT*/
 /* logo from layout*/
-.navbar h2 {
-  font-family: 'Acme', sans-serif;
-  font-size: 3rem;
-  color: rgb(177, 177, 46);
+h2.logo {
+  font-family: "Acme", sans-serif;
+  font-size: 3.5em;
+  color: #b3b33d;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.site-nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+  height: 2rem;
+  width: 100%;
+  background: #cc504e;
+}
+/*button*/
+.side-menu-trigger {
+  font-size: 1.2rem;
+  font-weight: bold;
+  height: 2rem;
+  border: 0;
+  border-radius: 5px;
+  background: #ecd861;
+  padding: 1px 10px;
+}
+
+.side-menu {
+  display: flex;
+  box-sizing: border-box;
+  position: fixed;
+  height: 100%;
+  width: 300px;
+  top: 20px;
+  right: 0;
+  transform: translateX(300px);
+  padding: 0;
+  background: #34b399;
+  transition: 0.3s transform ease-in-out;
+}
+
+.side-menu ul {
+  position: absolute;
+  display: flex;
+  height: calc(100% - 20px);
+  flex-wrap: wrap;
+  margin: 0 10px;
+  padding: 0;
+  list-style-type: none;
+  align-content: flex-start;
+}
+
+.side-menu ul li {
+  display: flex;
+  height: 30px;
+  background: #ffffff;
+  flex-basis: 100%;
+  margin-top: 20px;
+  color: #696e9e;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.side-menu ul li a {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+.open {
+  transform: translateX(0px);
 }
 
 /*footer layout*/
 footer p {
-  font-size: 1.6rem;
+  font-size: 0.8rem;
   text-align: center;
   line-height: 2.4rem;
-  margin: 5rem auto 2rem;
+  margin: 1.2rem auto;
 }
 
 /* INDEX/HOME */
@@ -48,20 +123,81 @@ footer p {
   /* height: 50vh; */
 }
 
+.Barcelona {
+  background-image: url("https://tifositours.com/wp-content/uploads/2019/02/Barcelona.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+.Naples {
+  background-image: url("https://miro.medium.com/max/699/1*2mzNSMIfrd-v6Wzoz1XPhw.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+.Paris {
+  background-image: url("https://86087-590828-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2016/01/paris-fin-de-semana-1024x683.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 10px 20px;
+}
+.Mallorca {
+  background-image: url("https://www.barcelo.com/pinandtravel/wp-content/uploads/2017/04/pin-and-travel-souvenirs-mallorca@2x-1170x781.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+.Warsaw {
+  background-image: url("https://www.telegraph.co.uk/content/dam/Travel/2017/July/warsaw-GettyImages-53893674.jpg?imwidth=1400");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+.Amsterdam {
+  background-image: url("https://a.cdn-hotels.com/gdcs/production43/d534/1bd81a82-de7a-4cf5-a625-ca3cd27a3346.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
+.Berlin {
+  background-image: url("https://cdn2.traveler.es/uploads/images/thumbs/201522/este_versus_oeste_icon_que_berlin_te_quedas_2585_1000x599.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+}
+
 .list-cities li {
-  font-size: 4rem;
-  color: blue;
+  /* 4 rem */
+  font-size: 2rem;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
   list-style: none;
-  padding: 2rem 4rem;
-  border-bottom: 2px solid blue;
+  /* 2rem */
+  padding: 1rem;
+  border-bottom: 5px solid #94d2ff;
 }
 
 .list-cities li a {
-  margin: 3rem auto;
-  padding: 3rem;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  color: aliceblue;
+  text-align: center;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.2);
+  text-decoration: none;
 }
 
 .list-cities li a:hover {
@@ -69,41 +205,33 @@ footer p {
   text-decoration: none;
 }
 
-.home-search {
+.home-search h3 {
   font-size: 2.6rem;
   text-align: center;
-  padding: 3rem 5rem;
-}
-
-.home-search h2 {
-  margin: 5rem auto;
-}
-
-.home-search input {
-  background-color: rgb(204, 224, 243);
+  padding: 1rem;
+  margin: 2rem auto;
+  color: #ffff7b;
 }
 
 /* SIGNUP VIEW */
 .signup-wrapper h1 {
-  font-size: 3rem;
+  font-size: 2.2rem;
   color: #175d79;
   text-align: center;
-  margin-bottom: 10rem;
+  margin-bottom: 2rem;
 }
 
 .signup-wrapper {
-  height: 80vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-content: space-between;
+  justify-content: space-between;
 }
 
 .signup-form {
-  height: 50vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: space-between;
   text-align: center;
 }
@@ -111,35 +239,61 @@ footer p {
 .signup-form label,
 .signup-form input {
   display: block;
-  font-size: 3rem;
-  line-height: 5rem;
-
+  font-size: 1.2rem;
+  line-height: 1.8rem;
 }
 
 .signup-form input {
   border: 4px solid #175d79;
   border-radius: 15px;
   background-color: rgb(245, 238, 238);
-  width: 40rem;
-  margin: 4rem auto;
+  width: 70vw;
+  margin: 1rem auto;
 }
 
 .signup-form button {
-  font-size: 3rem;
+  font-size: 2rem;
   color: #175d79;
   text-decoration: none;
   display: inline-block;
-  margin: 5rem auto;
-  width: 30rem;
+  margin: 1rem auto;
+  width: 70vw;
   text-transform: uppercase;
   padding: 0.5em 2em;
-  border: 5px solid #175d79;
+  border: 3px solid #175d79;
   border-radius: 2.5rem;
-
+  background-color: #b3b33d;
 }
 
 .signup-form p {
   font-size: 2rem;
+}
+
+/*EDIT PAGE as got more inputs*/
+.edit input {
+  margin: 1rem auto;
+}
+
+/*PROFILE page, the rest with place type*/
+.profile h2 {
+  font-size: 6rem;
+  color: #175d79;
+  text-align: center;
+  margin: 5rem auto 2rem;
+}
+
+.profile h3 {
+  font-weight: bold;
+  color: #1e5e77;
+  text-align: center;
+  margin: 2rem auto 5rem;
+}
+
+.profile p {
+  font-size: 3.8rem;
+  color: #2319ad;
+  text-align: center;
+  margin: 10rem auto 3rem;
 }
 
 /* CITY/YOU ARE IN */
@@ -159,20 +313,22 @@ footer p {
   margin: 4rem auto;
 }
 
-/*PLACE-TYPE */
+/*PLACE-TYPE FAVOURITES*/
 .place-type-wrapper h3 {
-  font-size: 3rem;
-  color: #175d79;
+  font-size: 2rem;
   text-align: center;
-  margin: 5rem auto;
+  padding: 1rem;
+  margin: 2rem auto;
+  color: #ffff7b;
 }
 
 .place-type-one {
+  height: 25vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2rem;
-  margin: 4rem 2rem;
+  padding: 1rem;
+  margin: 1rem 1rem;
   background-color: rgba(222, 222, 222, 0.4);
 }
 
@@ -180,10 +336,85 @@ footer p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 45%;
-}
+  width: 40%;
+  }
 
 .place-type-one img {
-  width: 45%;
-  margin-right: 2rem;
+  width: 60%;
+  margin-right: 1rem;
+}
+
+.place-type-one h2 a {
+  font-size: 1.2rem;
+  color: #b34f4d;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.place-type-one p {
+  font-size: 0.8rem;
+  color: #b34f4d;
+  text-align: center;
+}
+
+/*Single place card*/
+.single-place-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.single-place-wrapper h2 {
+  font-size: 2.8rem;
+  margin: 2.5rem auto 1rem;
+  color: #b34f4d;
+}
+
+.single-place-wrapper img {
+  max-width: 100%;
+  margin: 1rem auto;
+}
+
+.single-place-wrapper h4 {
+  font-size: 1.4rem;
+  margin: 0.3rem;
+  padding: 0.3rem;
+}
+
+.single-place-wrapper button {
+  width: 100%;
+  font-weight: bold;
+  color: #ffff7b;
+  padding: 1rem 3rem;
+  margin: 0.8rem auto;
+  line-height: 2rem;
+  font-size: 1.6rem;
+  background-color: #b34f4d;
+}
+
+.single-place-wrapper h5 a {
+  font-size: 2rem;
+  text-decoration: underline;
+  color: #b3b33d;
+}
+.single-place-wrapper h5 {
+  margin: 1rem auto;
+}
+
+.single-place-wrapper .comments {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(205, 209, 235);
+}
+.single-place-wrapper .comments h4 {
+  font-size: 1.2rem;
+  border-bottom: 1px solid #b34f4d;
+  text-align: center;
+  margin: 0 2rem;
+}
+.single-place-wrapper .comments p {
+  font-size: 1rem;
+  margin: 0.3rem;
 }
