--- a/views/city.hbs
+++ b/views/city.hbs
@@ -2,11 +2,8 @@
 <div class="city-wrapper">
 <h2>You are in {{city.[0].name}}</h2>
 
-
-{{!-- <h2>{{this.restaurants.[0].name}}</h2> --}}
-
-<h3><a href="/placetype/{{city.[0].name}}/restaurants">Restaurantes</a></h3>
-<h3><a href="/placetype/{{city.[0].name}}/museums">museums</a></h3>
+<h3><a href="/placetype/{{city.[0].name}}/restaurants">Restaurants</a></h3>
+<h3><a href="/placetype/{{city.[0].name}}/museums">Museums</a></h3>
 <h3><a href="/placetype/{{city.[0].name}}/events">Events</a></h3>
 <h3><a href="/placetype/{{city.[0].name}}/hotels">Hotels</a></h3>
 </div>
