--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,20 +5,44 @@
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width" , initial-scale="1">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  {{!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> --}}
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h2>CityEasier</h2>
+
+  {{!-- nav class from bootstrap navbar-expand-lg navbar-light bg-light --}}
+  <h2 class="logo">CityEasier</h2>
+  <nav class="site-nav">
+    <div class="nav">
+      <button class="side-menu-trigger">Menu</button>
+      <div class="side-menu">
+        <ul>
+          <li> <a href="/"> Home</a></li>
+          {{#unless currentUser}}
+          <li><a href="/auth/signup">Sign up</a></li>
+          <li><a href="/auth/login">Log in</a> </li>
+          {{/unless}}
+          {{#if currentUser}}
+          <li><a href="/auth/profile">Profile</a></li>
+          <li><a href="/auth/logout">Log out</a></li>
+          {{/if}}
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="side-menu">
     <ul>
       <li> <a href="/"> Home</a></li>
       <li><a href="auth/signup">Sign up</a></li>
       <li><a href="auth/login">Log in</a> </li>
+      <li><a href="auth/profile">Profile</a></li>
+      <li><a href="auth/logout">Log out</a></li>
     </ul>
-  </nav>
+  </div>
 
 
   {{{body}}}
@@ -36,5 +60,6 @@
 </footer>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/main.js"></script>
-  </body>
+</body>
+
 </html>
