--- a/views/private/edit.hbs
+++ b/views/private/edit.hbs
@@ -1,25 +1,25 @@
-<div class="signup-wrapper"></div>
-<h1>Edit account</h1>
+<div class="signup-wrapper">
+    <h1>Edit account</h1>
 
-<form class="signup-form" action='/private/edit' method='POST'>
+    <form class="signup-form edit" action='/private/edit' method='POST'>
 
-    {{!-- <img src="" alt="">
+        {{!-- <img src="" alt="">
     <button>Change photo</button> --}}
 
-    <label for=''>Username</label>
-    <input type='text' name='username'>
+        <label for=''>Username</label>
+        <input type='text' name='username'>
 
-    <label for=''>Email</label>
-    <input type='email' name='email'>
+        <label for=''>Email</label>
+        <input type='email' name='email'>
 
-    <label for=''>Password</label>
-    <input type='password' name='password'>
+        <label for=''>Password</label>
+        <input type='password' name='password'>
 
-    <label for=''>New Password</label>
-    <input type='password' name='newPassword'>
+        <label for=''>New Password</label>
+        <input type='password' name='newPassword'>
 
-    <button type='submit'>Save</button>
-</form>
+        <button type='submit'>Save</button>
+    </form>
 </div>
 
 {{!-- error message display --}}
