--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -7,13 +7,16 @@
 
     {{!-- For each museum in Barcelona we will have all the information below --}}
     {{#each arrayMuseumInCity}}
-
-    <h2><a href="/singleplace/Museum/{{this.name}}">Name: {{this.name}}</a></h2>
-    <img src="{{this.img}}" alt="Photo of restaurant">
-    <p>Rating: {{this.rating}}</p>
-    <p>Type: {{this.type}}</p>
-    <p>City: {{this.contact.address}}</p>
-    <br>
+    <div class="place-type-one">
+        <img src="{{this.img}}" alt="Photo of restaurant">
+        <div class="place-description">
+            <h2><a href="/singleplace/Museum/{{this.name}}">Name: {{this.name}}</a></h2>
+            <p>Rating: {{this.rating}}</p>
+            <p>Type: {{this.type}}</p>
+            <p>City: {{this.contact.address}}</p>
+            <br>
+        </div>
+    </div>
 
     {{/each}}
 
@@ -32,25 +35,30 @@
     {{/each}}
     {{!-- For each event in Barcelona we will have all the information below --}}
     {{#each arrayEventInCity}}
-
-    <h2><a href="/singleplace/Event/{{this.name}}">Name: {{this.name}}</a></h2>
-    <img src="{{this.img}}" alt="Photo of restaurant">
-    <p>Rating : {{this.rating}}</p>
-    <p>Type: {{this.type}}</p>
-    <p>City: {{this.contact.address}}</p>
-    <br>
+    <div class="place-type-one">
+        <img src="{{this.img}}" alt="Photo of event">
+        <div class="place-description">
+            <h2><a href="/singleplace/Event/{{this.name}}">Name: {{this.name}}</a></h2>
+            <p>Rating : {{this.rating}}</p>
+            <p>Type: {{this.type}}</p>
+            <p>City: {{this.contact.address}}</p>
+            <br>
+        </div>
+    </div>
 
     {{/each}}
 
     {{!-- For each hotel in Barcelona we will have all the information below --}}
     {{#each arrayHotelInCity}}
-
-    <h2><a href="/singleplace/Hotel/{{this.name}}">Name: {{this.name}}</a></h2>
-    <img src="{{this.img}}" alt="Photo of restaurant">
-    <p>Rating : {{this.rating}}</p>
-    <p>Type : {{this.type}}</p>
-    <p>City: {{this.contact.address}}</p>
-    <br>
-
+    <div class="place-type-one">
+        <img src="{{this.img}}" alt="Photo of event">
+        <div class="place-description">
+            <h2><a href="/singleplace/Hotel/{{this.name}}">Name: {{this.name}}</a></h2>
+            <p>Rating : {{this.rating}}</p>
+            <p>Type : {{this.type}}</p>
+            <p>City: {{this.contact.address}}</p>
+            <br>
+        </div>
+    </div>
     {{/each}}
 </div>
