--- a/CodeProject/views/singlePlace/hotelDetail.hbs
+++ b/CodeProject/views/singlePlace/hotelDetail.hbs
@@ -1,5 +1,5 @@
 {{!-- For hotels --}}
-<div>
+<div class="single-place-wrapper">
     <h2>{{hotel.[0].name}}</h2>
 
     <img src="{{hotel.[0].img}}" alt="">
@@ -12,12 +12,13 @@
 
     <button class="favourite" data-placeid="{{hotel.[0]._id}}">Button to add favourites</button>
 
-    <h4><a href="{{hotel.[0].web}}">web</a></h4>
+    <h5><a href="{{hotel.[0].web}}">web</a></h5>
 
     <p>Description : {{hotel.[0].description}} </p>
 
     {{#each hotel.[0].comments}}
-    <div>
+    <div class="comments">
+        <h4>Comment:</h4>
         <p>Name: {{this.name}}</p>
         <p>date: {{this.date}}</p>
         <p>comment: {{this.comment}}</p>
