--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,13 +61,13 @@ h2.logo {
   display: flex;
   box-sizing: border-box;
   position: fixed;
-  height: 100%;
-  width: 300px;
+  height: 40%;
+  width: 200px;
   top: 20px;
   right: 0;
-  transform: translateX(300px);
+  transform: translateX(200px);
   padding: 0;
-  background: #34b399;
+  background: #b34f4d;
   transition: 0.3s transform ease-in-out;
 }
 
@@ -79,29 +79,33 @@ h2.logo {
   margin: 0 10px;
   padding: 0;
   list-style-type: none;
-  align-content: flex-start;
+  align-content: space-around;
 }
 
 .side-menu ul li {
   display: flex;
   height: 30px;
-  background: #ffffff;
   flex-basis: 100%;
   margin-top: 20px;
-  color: #696e9e;
   border-radius: 5px;
   overflow: hidden;
 }
 
 .side-menu ul li a {
+  font-weight: bold;
   display: flex;
   padding: 10px;
   align-items: center;
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #ffff7b;
   text-decoration: none;
   box-sizing: border-box;
+}
+
+.side-menu ul li a:hover {
+  background-color: #cc504e;
+  color: #ffff7b;
 }
 
 .open {
@@ -218,14 +222,13 @@ footer p {
   font-size: 2.2rem;
   color: #175d79;
   text-align: center;
-  margin-bottom: 2rem;
 }
 
 .signup-wrapper {
-  height: 75vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .signup-form {
@@ -248,25 +251,28 @@ footer p {
   border-radius: 15px;
   background-color: rgb(245, 238, 238);
   width: 70vw;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
 }
 
 .signup-form button {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #175d79;
   text-decoration: none;
   display: inline-block;
   margin: 1rem auto;
-  width: 70vw;
+  width: 75vw;
   text-transform: uppercase;
   padding: 0.5em 2em;
-  border: 3px solid #175d79;
+  border: 2px solid #175d79;
   border-radius: 2.5rem;
   background-color: #b3b33d;
 }
 
 .signup-form p {
-  font-size: 2rem;
+  font-size: 1.1rem;
+}
+.signup-form p a {
+  color: #b34f4d;
 }
 
 /*EDIT PAGE as got more inputs*/
@@ -274,46 +280,63 @@ footer p {
   margin: 1rem auto;
 }
 
-/*PROFILE page, the rest with place type*/
+/*PROFILE page, the rest(list of favs) with place type*/
 .profile h2 {
-  font-size: 6rem;
-  color: #175d79;
+  font-size: 2.2rem;
   text-align: center;
-  margin: 5rem auto 2rem;
+  padding: 0.3rem;
+  margin: 0.2rem auto;
+  color: #ffff7b;
 }
-
-.profile h3 {
+button.edit-profile {
+  width: 100%;
   font-weight: bold;
-  color: #1e5e77;
-  text-align: center;
-  margin: 2rem auto 5rem;
+  color: #ffff7b;
+  padding: 0.5rem 3rem;
+  margin: 0.5rem auto;
+  line-height: 2rem;
+  font-size: 1.6rem;
+  background-color: #b34f4d;
 }
 
 .profile p {
-  font-size: 3.8rem;
-  color: #2319ad;
+  font-size: 1.8rem;
+  color: #b34f4d;
   text-align: center;
-  margin: 10rem auto 3rem;
+  margin: 1rem auto;
+}
+.remove-favorite {
+  font-size: 0.9rem;
+  color: #175d79;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0.3rem auto;
+  padding: 0.3em 0.5em;
+  border: 0.5px solid #175d79;
+  border-radius: 1rem;
+  background-color: #b3b33d;
 }
 
 /* CITY/YOU ARE IN */
 .city-wrapper h2 {
-  font-size: 3rem;
-  color: #175d79;
+  font-size: 2.2rem;
   text-align: center;
-  margin: 5rem auto;
+  padding: 0.5rem;
+  margin: 0.6rem auto 0.6rem;
+  color: #ffff7b;
 }
 
 .city-wrapper h3 {
-  font-size: 2.4rem;
-  padding: 2rem 4rem;
-  background-color: rgb(205, 209, 235);
+  font-size: 1.4rem;
+  padding: 0.8rem 2rem;
   text-decoration: none;
   text-align: center;
-  margin: 4rem auto;
+  margin: 0 auto;
+  border: 1px solid #94d2ff;
+  background-color: rgba(222, 222, 222, 0.4);
 }
 
-/*PLACE-TYPE FAVOURITES*/
+/*PLACE-TYPE and profile page: FAVOURITES*/
 .place-type-wrapper h3 {
   font-size: 2rem;
   text-align: center;
@@ -323,39 +346,48 @@ footer p {
 }
 
 .place-type-one {
-  height: 25vh;
+  height: 22vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem;
-  margin: 1rem 1rem;
+  padding: 0.3rem;
+  margin: 1rem 0.2rem;
   background-color: rgba(222, 222, 222, 0.4);
 }
 
 .place-description {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  width: 40%;
-  }
+  justify-content: space-between;
+  width: 50%;
+}
 
 .place-type-one img {
-  width: 60%;
+  width: 50%;
   margin-right: 1rem;
 }
 
-.place-type-one h2 a {
-  font-size: 1.2rem;
+.place-description h2 a {
+  font-size: 0.8rem;
   color: #b34f4d;
   text-align: center;
   text-decoration: none;
   display: inline-block;
 }
 
-.place-type-one p {
+.place-description h2,
+.place-description p {
   font-size: 0.8rem;
   color: #b34f4d;
   text-align: center;
+  margin: 0.3rem auto;
+}
+.profile-favs h2,
+.profile-favs p {
+  font-size: 0.8rem;
+  color: #b34f4d;
+  text-align: center;
+  margin: 0.1rem auto;
 }
 
 /*Single place card*/
