--- a/views/singlePlace/museumDetail.hbs
+++ b/views/singlePlace/museumDetail.hbs
@@ -1,5 +1,5 @@
 {{!-- For Museums --}}
-<div>
+<div class="single-place-wrapper">
     <h2>{{museum.[0].name}}</h2>
 
     <img src="{{museum.[0].img}}" alt="">
@@ -10,14 +10,15 @@
 
     <h4>City: {{museum.[0].contact.address}} </h4>
 
-    <button class="favourite" data-placeid="{{museum.[0]._id}}">Button to add favourites</button>
+    <button class="favourite" data-placeid="{{museum.[0]._id}}">Add to favourites</button>
 
-    <h4><a href="{{museum.[0].web}}">web</a></h4>
+    <h5><a href="{{museum.[0].web}}">web</a></h5>
 
     <p>Description : {{museum.[0].description}} </p>
 
     {{#each museum.[0].comments}}
-    <div>
+    <div class="comments">
+        <h4>Comment:</h4>
         <p>Name: {{this.name}}</p>
         <p>date: {{this.date}}</p>
         <p>comment: {{this.comment}}</p>
